--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/blue"
     android:orientation="vertical"
-    android:paddingStart="@dimen/padding_medium"
-    android:paddingEnd="@dimen/padding_medium"
+    android:paddingHorizontal="@dimen/padding_medium"
     android:paddingBottom="28dp"
     android:id="@+id/main">
     <TextView
@@ -20,6 +19,7 @@
         android:layout_gravity="center"
         />
     <Button
+        android:id="@+id/search"
         android:layout_marginTop="24dp"
         android:layout_width="match_parent"
         android:layout_height="@dimen/null_dp"
@@ -34,6 +34,7 @@
         app:iconPadding="@dimen/icon_padding"
         app:iconTint="@color/black"/>
     <Button
+        android:id="@+id/library"
         android:layout_width="match_parent"
         android:layout_height="@dimen/null_dp"
         android:layout_weight="1"
@@ -48,6 +49,7 @@
         app:iconPadding="@dimen/icon_padding"
         app:iconTint="@color/black"/>
     <Button
+        android:id="@+id/settings"
         android:layout_width="match_parent"
         android:layout_height="@dimen/null_dp"
         android:layout_weight="1"
