--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,8 @@
         app:icon="@drawable/search"
         app:iconGravity="textStart"
         app:iconPadding="@dimen/icon_padding"
-        app:iconTint="@color/black"/>
+        app:iconTint="@color/black"
+        android:textAllCaps="false"/>
     <Button
         android:id="@+id/library"
         android:layout_width="match_parent"
@@ -47,7 +48,8 @@
         app:icon="@drawable/library"
         app:iconGravity="textStart"
         app:iconPadding="@dimen/icon_padding"
-        app:iconTint="@color/black"/>
+        app:iconTint="@color/black"
+        android:textAllCaps="false"/>
     <Button
         android:id="@+id/settings"
         android:layout_width="match_parent"
@@ -62,5 +64,6 @@
         app:icon="@drawable/settings"
         app:iconGravity="textStart"
         app:iconPadding="@dimen/icon_padding"
-        app:iconTint="@color/black"/>
+        app:iconTint="@color/black"
+        android:textAllCaps="false"/>
 </LinearLayout>
