Non-critical changes after review

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_medium"
         app:cornerRadius="@dimen/button_radius"
-        app:icon="@drawable/search"
+        app:icon="@drawable/ic_search_24"
         app:iconGravity="textStart"
         app:iconPadding="@dimen/icon_padding"
         app:iconTint="@color/black"
@@ -45,7 +45,7 @@
         android:textColor="@color/black"
         app:cornerRadius="@dimen/button_radius"
         android:layout_marginTop="@dimen/padding_medium"
-        app:icon="@drawable/library"
+        app:icon="@drawable/ic_library_24"
         app:iconGravity="textStart"
         app:iconPadding="@dimen/icon_padding"
         app:iconTint="@color/black"
@@ -61,7 +61,7 @@
         android:textSize="@dimen/text_size_medium"
         app:cornerRadius="@dimen/button_radius"
         android:layout_marginTop="@dimen/padding_medium"
-        app:icon="@drawable/settings"
+        app:icon="@drawable/ic_settings_24"
         app:iconGravity="textStart"
         app:iconPadding="@dimen/icon_padding"
         app:iconTint="@color/black"
