--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@
     <Toolbar
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:navigationIcon="@drawable/arrow_back"
+        android:navigationIcon="@drawable/ic_arrow_back_24"
         android:title="@string/setup"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_medium"
@@ -33,7 +33,7 @@
         android:text="@string/share_app"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_small"
-        app:drawableEndCompat="@drawable/share"
+        app:drawableEndCompat="@drawable/ic_share_24"
         android:gravity="center_vertical"
         android:paddingHorizontal="@dimen/paddingHorizontal_small"
         android:layout_gravity="center"
@@ -45,7 +45,7 @@
         android:text="@string/write_support"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_small"
-        app:drawableEndCompat="@drawable/support"
+        app:drawableEndCompat="@drawable/ic_support_24"
         android:gravity="center_vertical"
         android:paddingHorizontal="@dimen/paddingHorizontal_small"
         android:layout_gravity="center"
@@ -57,7 +57,7 @@
         android:text="@string/user_agreement"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_small"
-        app:drawableEndCompat="@drawable/arrow_forward"
+        app:drawableEndCompat="@drawable/ic_arrow_forward_24"
         android:gravity="center_vertical"
         android:paddingHorizontal="@dimen/paddingHorizontal_small"
         android:layout_gravity="center"
