--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingHorizontal="@dimen/padding_medium"
-    android:paddingBottom="28dp">
+    android:paddingBottom="28dp"
+    android:background="?attr/colorPrimary"
+    android:statusBarColor="?attr/colorPrimary">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
