--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,18 +3,20 @@
     android:id="@+id/settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    <Toolbar
+    android:orientation="vertical"
+    android:statusBarColor="?attr/colorPrimaryVariant">
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/back_to_main"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:navigationIcon="@drawable/ic_arrow_back_24"
-        android:title="@string/setup"
-        android:textColor="?attr/colorOnPrimary"
+        app:title="@string/setup"
         android:textSize="@dimen/text_size_medium"
         android:fontFamily="@font/ys_display_medium"
-        android:textFontWeight="500"/>
-    <androidx.appcompat.widget.SwitchCompat
+        android:textFontWeight="500"
+        android:textColor="?attr/colorOnSecondary"
+        app:navigationIcon="@drawable/ic_arrow_back_24"
+        android:backgroundTint="@color/white"/>
+    <com.google.android.material.switchmaterial.SwitchMaterial
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -23,9 +25,10 @@
         android:paddingStart="@dimen/paddingHorizontal_small"
         android:paddingEnd="@dimen/padding_small"
         android:text="@string/dark_mode"
-        android:textColor="?attr/colorOnSecondary"
+        app:textColor="?attr/colorOnSecondary"
         android:textSize="@dimen/text_size_small"
-        android:fontFamily="@font/ys_display_regular"/>
+        android:fontFamily="@font/ys_display_regular"
+        style="@style/SwitchStyle"/>
     <TextView
         android:text="@string/share_app"
         app:drawableEndCompat="@drawable/ic_share_24"
