--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -20,14 +20,13 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minHeight">@dimen/minHeight</item>
-        <item name="android:textColor">@color/black_0</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/text_size_small</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:paddingHorizontal">@dimen/paddingHorizontal_small</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
-        <item name="android:drawableTint">@color/gray</item>
-        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:drawableTint">@color/white</item>
     </style>
 </resources>
