--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -25,7 +25,7 @@
         android:paddingStart="@dimen/paddingHorizontal_small"
         android:paddingEnd="@dimen/padding_small"
         android:text="@string/dark_mode"
-        app:textColor="?attr/colorOnSecondary"
+        android:textColor="?attr/colorOnSecondary"
         android:textSize="@dimen/text_size_small"
         android:fontFamily="@font/ys_display_regular"
         style="@style/SwitchStyle"/>
