--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:minHeight="@dimen/minHeight"
         android:text="@string/app_name"
-        android:textColor="?attr/colorOnPrimary"
+        android:textColor="?attr/colorSecondary"
         android:textSize="@dimen/text_size_medium"
         android:gravity="center_vertical"
         android:layout_gravity="center"
