--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -14,8 +14,7 @@
         android:fontFamily="@font/ys_display_medium"
         android:textFontWeight="500"
         android:textColor="?attr/colorOnSecondary"
-        app:navigationIcon="@drawable/ic_arrow_back_24"
-        android:backgroundTint="@color/white"/>
+        app:navigationIcon="@drawable/ic_arrow_back_24"/>
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,10 +24,9 @@
         android:paddingStart="@dimen/paddingHorizontal_small"
         android:paddingEnd="@dimen/padding_small"
         android:text="@string/dark_mode"
-        android:textColor="?attr/colorOnSecondary"
+        android:textColor="?attr/colorSecondary"
         android:textSize="@dimen/text_size_small"
-        android:fontFamily="@font/ys_display_regular"
-        style="@style/SwitchStyle"/>
+        android:fontFamily="@font/ys_display_regular"/>
     <TextView
         android:text="@string/share_app"
         app:drawableEndCompat="@drawable/ic_share_24"
