--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minHeight">@dimen/minHeight</item>
-        <item name="android:textColor">@color/black_0</item>
+        <item name="android:textColor">?attr/colorSecondaryVariant</item>
         <item name="android:textSize">@dimen/text_size_small</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:paddingHorizontal">@dimen/paddingHorizontal_small</item>
