--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,16 +7,13 @@
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/white</item>
-        <item name="colorSecondaryVariant">@color/white</item>
+        <item name="colorSecondaryVariant">@color/black_0</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
 
         <!-- Customize your theme here. -->
 
     </style>
-    <style name="SwitchStyle" parent="">
-        <item name="colorOnSurface">@color/blue</item>
-        <item name="colorSecondary">@color/blue</item>
-    </style>
+
     <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
 </resources>
