--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,18 +3,17 @@
     android:id="@+id/settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:statusBarColor="?attr/colorPrimaryVariant">
+    android:orientation="vertical">
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/back_to_main"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        app:title="@string/setup"
-        android:textSize="@dimen/text_size_medium"
         android:fontFamily="@font/ys_display_medium"
-        android:textFontWeight="500"
         android:textColor="?attr/colorOnSecondary"
-        app:navigationIcon="@drawable/ic_arrow_back_24"/>
+        android:textFontWeight="500"
+        android:textSize="@dimen/text_size_medium"
+        app:navigationIcon="@drawable/ic_arrow_back_24"
+        app:title="@string/setup" />
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,7 +23,6 @@
         android:paddingStart="@dimen/paddingHorizontal_small"
         android:paddingEnd="@dimen/padding_small"
         android:text="@string/dark_mode"
-        android:textColor="?attr/colorSecondary"
         android:textSize="@dimen/text_size_small"
         android:fontFamily="@font/ys_display_regular"/>
     <TextView
