--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,19 +1,22 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/blue</item>
-        <item name="colorPrimaryVariant">@color/white</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/white</item>
-        <item name="colorSecondaryVariant">@color/black_0</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-
-        <!-- Customize your theme here. -->
-
-    </style>
-
-    <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
-</resources>
+    <resources xmlns:tools="http://schemas.android.com/tools">
+        <!-- Base application theme. -->
+        <style name="Base.Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+            <!-- Primary brand color. -->
+            <item name="colorPrimary">@color/blue</item>
+            <item name="colorPrimaryVariant">@color/white</item>
+            <item name="colorOnPrimary">@color/white</item>
+            <!-- Secondary brand color. -->
+            <item name="colorSecondary">@color/white</item>
+            <item name="colorSecondaryVariant">@color/black_0</item>
+            <item name="colorOnSecondary">@color/black</item>
+            <!-- Status bar color. -->
+            <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+            <!-- Customize your theme here. -->
+            <!--<item name="thumbTint">@color/green</item>
+            <item name="trackTint">@color/green_light</item>-->
+            <item name="colorControlNormal">@color/black</item>
+            <item name="colorAccent"> @color/green</item>
+            <!-- <item name="android:background">@color/black</item>-->
+         </style>
+         <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
+     </resources>
