--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -13,7 +13,8 @@
         android:textFontWeight="500"
         android:textSize="@dimen/text_size_medium"
         app:navigationIcon="@drawable/ic_arrow_back_24"
-        app:title="@string/setup" />
+        app:title="@string/setup"
+        app:navigationIconTint="?attr/colorControlNormal"/>
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,14 +27,17 @@
         android:textSize="@dimen/text_size_small"
         android:fontFamily="@font/ys_display_regular"/>
     <TextView
+        android:id="@+id/share_app"
         android:text="@string/share_app"
         app:drawableEndCompat="@drawable/ic_share_24"
         style="@style/SettingsTextStyle"/>
     <TextView
+        android:id="@+id/write_support"
         android:text="@string/write_support"
         app:drawableEndCompat="@drawable/ic_support_24"
         style="@style/SettingsTextStyle"/>
     <TextView
+        android:id="@+id/user_agreement"
         android:text="@string/user_agreement"
         app:drawableEndCompat="@drawable/ic_arrow_forward_24"
         style="@style/SettingsTextStyle"/>
