--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -29,4 +29,31 @@
         <item name="android:textFontWeight">400</item>
         <item name="android:drawableTint">@color/white</item>
     </style>
+    <style name="ToolbarStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:textFontWeight">500</item>
+        <item name="android:textSize">@dimen/text_size_medium</item>
+        <item name="navigationIcon">@drawable/ic_arrow_back_24</item>
+        <item name="navigationIconTint">?attr/colorControlNormal</item>
+    </style>
+    <style name="TextViewSearchStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">52dp</item>
+        <item name="android:hint">@string/search</item>
+        <item name="android:maxLength">5</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:inputType">number</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/black</item>
+        <item name="android:paddingHorizontal">@dimen/padding_medium</item>
+        <item name="android:drawableStart">@drawable/ic_search_24</item>
+        <item name="android:drawableTint">@color/black</item>
+        <item name="android:drawablePadding">@dimen/small_radius</item>
+        <item name="android:layout_marginStart">@dimen/paddingHorizontal_small</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:radius">@dimen/small_radius</item>
+    </style>
 </resources>
