--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#3772E7</color>
     <color name="blue_light">#9FBBF3</color>
-    <color name="gray">#AEAFB4</color>
     <color name="green">#00D6C3</color>
     <color name="green_light">#76EAE0</color>
+    <color name="gray">#AEAFB4</color>
+    <color name="gray_light">#E6E8EB</color>
 </resources>
