--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,9 +14,9 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:background">@color/black</item>
-        <!--<item name="thumbTint">@color/blue</item>
-        <item name="trackTint">@color/blue_light</item>-->
         <item name="colorControlNormal">@color/white</item>
         <item name="colorAccent">@color/blue</item>
+        <item name="colorOnBackground">@color/white</item>
+        <item name="editTextColor">@color/black</item>
     </style>
 </resources>
