--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,8 @@
             <!-- Customize your theme here. -->
             <item name="colorControlNormal">@color/black</item>
             <item name="colorAccent">@color/green</item>
+            <item name="colorOnBackground">@color/gray_light</item>
+            <item name="editTextColor">@color/gray</item>
          </style>
          <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
      </resources>
