--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,5 +18,6 @@
         <item name="colorAccent">@color/blue</item>
         <item name="colorOnBackground">@color/white</item>
         <item name="editTextColor">@color/black</item>
+        <item name="android:drawableTint">@color/white</item>
     </style>
 </resources>
