--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,8 +12,11 @@
     <dimen name="padding_small">14dp</dimen>
     <dimen name="padding_medium">16dp</dimen>
 
+    <dimen name="text_size_11">11sp</dimen>
     <dimen name="text_size_small">16sp</dimen>
     <dimen name="text_size_medium">22sp</dimen>
 
     <dimen name="minHeight">61dp</dimen>
+
+    <dimen name="imageSize_medium">45dp</dimen>
 </resources>
