--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,10 +49,20 @@
         <item name="android:inputType">text</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">?attr/editTextColor</item>
+        <item name="android:textSize">@dimen/text_size_small</item>
         <item name="android:drawableStart">@drawable/ic_search_24</item>
         <item name="android:drawableTint">?attr/editTextColor</item>
         <item name="android:drawablePadding">@dimen/small_radius</item>
         <item name="android:background">@drawable/text_view_shape</item>
         <item name="android:paddingStart">@dimen/padding_medium</item>
+    </style>
+    <style name="TrackViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">@dimen/text_size_11</item>
+        <item name="android:gravity">left</item>
     </style>
 </resources>
